# cabal-multi-repl-bug-repro

./: Makefile  README.md  foo.cabal  log.txt  log.verbose.txt  notes.md  shell.nix
